--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
-<div class="login-container">
-    <h2>Login</h2>
-    <form th:action="@{/login}" method="post">
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" required>
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <button type="submit">Login</button>
-    </form>
-</div>
+<h2>Login</h2>
+<form action="/login" method="post">
+    <label for="username">Usuário:</label>
+    <input type="text" id="username" name="username">
+
+    <label for="password">Senha:</label>
+    <input type="password" id="password" name="password">
+
+    <button type="submit">Entrar</button>
+</form>
 </body>
 </html>
